.\cv curso.html

--- a/mod3/prueba.html
+++ b/mod3/prueba.html
@@ -9,21 +9,25 @@
 <body>
     <!-- esta pagina fue realizada como se dio en la clase virtual-->
 
-    <form action="">
+    <form action="" method="">
         <p>
-            <label for="">Nombre</label>
-            <imput type="text" placeholder="text">
+            <label for="">Nombre </label>
+            <input type="text" placeholder="Nombre">
 
         </p>
         <p>
             <label for="">Apellido</label>
-            <input type="text" placeholder="text">
+            <input type="text" placeholder="Apellido">
         
         </p>
         <p>
             <label for="">Email de contacto</label>
             <input type="email">
         </p>
+
+        <form action="text">
+            <h4>volver a pagina<a href="cv curso.html" > 1</a></h4> 
+        </form>
 
     </form>
     
