--- a/mod4/cv curso.html
+++ b/mod4/cv curso.html
@@ -42,6 +42,9 @@
             </form>
             
         </div>
+        <div id="test">
+        <p>caja de prueba</p>
+         </div>
             
     </body>
     <footer><h6>Vote por Khan</h6></footer>
